@@ -40,11 +40,6 @@ mame_regtest
 				- config_get_str()
 				- config_get_ptr()
 		- store both output file states in case of autosave
-		- write temporary files to mrt_tmp folder 
-			- tmp_stderr
-			- tmp_stdout
-			- dummy_ini
-			- mrt_debugscript
 		- restructure static variables
 			- pair the config ones
 			- pair the static strings
