@@ -356,6 +356,7 @@
 	- added a small tool called "create_report", which will create reports out of the output XMLs
 	- removed option "result_file" in favor of "report 1"
 	- removed html_enc parameter from print_driver_info()
+	- added option "use_log" to write the -log output
 	- removed "log_devices" (MESS already has the -listdevices option)
 	- changed valgrind outfile file to <driver_string>.valgrind_<pid>
 	- valgrind output files are now written to the "output_folder"
@@ -363,6 +364,11 @@
 	- added option "valgrind_parameters" to specify the valgrind parameters (--log-file is added by mame_regtest)
 	- put valgrind code into compile-time defijne USE_VALGRIND
 	- removed option "validate_listxml" - DTD validation is now always performed
+	- using folder "mrt_temp" to store temporary files
+		- tmp_stdout
+		- tmp_stderr
+		- mrt_debugscript
+		- dummy_ini folder
 
 	create_report
 	- added "report 1", which creates a file with all driver, that didn't return 0
